ErrorProne inspections added.